--- a/src/styles/1-utilities/variables/_operands.scss
+++ b/src/styles/1-utilities/variables/_operands.scss
@@ -1,1 +1,12 @@
-$operands: ( 0 1 2 3 4 5 6 7 8 9 );
+$operands: (
+  '0': 'zero',
+  '1': 'one',
+  '2': 'two',
+  '3': 'three',
+  '4': 'four',
+  '5': 'five',
+  '6': 'six',
+  '7': 'seven',
+  '8': 'eight',
+  '9': 'nine',
+);
