update operators from list to map

--- a/src/styles/1-utilities/variables/_operators.scss
+++ b/src/styles/1-utilities/variables/_operators.scss
@@ -1,22 +1,21 @@
 $operators: (
-  '+',
-  '-',
-  '/',
-  '\\',
-  'Mod',
-  '(',
-  ')',
-  'Sigma',
-  'Pi',
-  'n',
-  'pi',
-  'e',
-  'C',
-  'P',
-  '!',
-  'log',
-  'ln',
-  'pow',
-  '^',
-  'root',
+  '+': 'add',
+  '-': 'min',
+  '/': 'div',
+  '\\': 'mul',
+  'Mod': 'Mod',
+  '(': 'p-l',
+  ')': 'p-r',
+  'Sigma': 'sig',
+  'Pi': 'pro',
+  'n': 'sum',
+  'pi': 'mpi',
+  'e': 'mec',
+  'C': 'com',
+  'P': 'per',
+  '!': 'fac',
+  'log': 'log',
+  'ln': 'nat',
+  '^': 'pow',
+  'root': 'rot',
 );
