--- a/src/styles/1-utilities/variables/_operators.scss
+++ b/src/styles/1-utilities/variables/_operators.scss
@@ -1,21 +1,12 @@
 $operators: (
   '+': 'add',
   '-': 'min',
-  '/': 'div',
-  '\\': 'mul',
-  'Mod': 'Mod',
-  '(': 'p-l',
-  ')': 'p-r',
-  'Sigma': 'sig',
-  'Pi': 'pro',
-  'n': 'sum',
-  'pi': 'mpi',
-  'e': 'mec',
-  'C': 'com',
-  'P': 'per',
-  '!': 'fac',
-  'log': 'log',
-  'ln': 'nat',
+  '÷': 'div',
+  '×': 'mul',
   '^': 'pow',
-  'root': 'rot',
+  '=': 'equal',
+  '.': 'dot',
+  '±': 'sign',
+  'C': 'reset',
+  'CE': 'clear',
 );
