create inputs grid area name

--- a/src/styles/3-components/_Inputs.scss
+++ b/src/styles/3-components/_Inputs.scss
@@ -5,3 +5,11 @@
     grid-area: #{ $function };
   }
 }
+
+@each $value, $area in map-merge( $operands, $operators )
+{
+  input[ value='#{ $value }' ]
+  {
+    grid-area: #{ $area };
+  }
+}
