global variables colors, border, radius & transition

--- a/src/styles/1-utilities/variables/_variables.scss
+++ b/src/styles/1-utilities/variables/_variables.scss
@@ -1,1 +1,9 @@
+$colorBackground: #232855;
+$colorBorder: #215b63;
+$colorColor: #5fcc9c;
+$colorHover: #ffffe3;
+
+$transition: .35s ease-in-out;
 $padding: 10px;
+$border: 2.5px solid $colorBorder;
+$radius: 5px;
