--- a/src/styles/2-bases/_input.scss
+++ b/src/styles/2-bases/_input.scss
@@ -1,4 +1,33 @@
 input
 {
+  cursor: pointer;
+  font-size: 1rem;
 
+  color: $colorColor;
+  background: $colorBackground;
+
+  border: $border;
+  border-radius: $radius;
+
+  transition: $transition;
+  transition-property: color, border, background;
+
+  &:hover
+  {
+    color: $colorHover;
+    border-color: $colorColor;
+  }
+
+  &:focus
+  {
+    outline: 0;
+  }
+
+  &:focus,
+  &:active
+  {
+    color: $colorHover;
+    border-color: $colorHover;
+    background: $colorBorder;
+  }
 }
