switch dot with sign input

--- a/src/styles/4-layouts/_basic.scss
+++ b/src/styles/4-layouts/_basic.scss
@@ -12,5 +12,5 @@
     'seven eight nine mul'
     'four five six min'
     'one two three add'
-    'dot zero sign equal';
+    'sign zero dot equal';
 }
