update border size

--- a/src/styles/1-utilities/variables/_variables.scss
+++ b/src/styles/1-utilities/variables/_variables.scss
@@ -5,5 +5,5 @@ $colorHover: #ffffe3;
 
 $transition: .35s ease-in-out;
 $padding: 10px;
-$border: 2.5px solid $colorBorder;
+$border: .5vmin solid $colorBorder;
 $radius: 5px;
