--- a/src/styles/1-utilities/variables/_functions.scss
+++ b/src/styles/1-utilities/variables/_functions.scss
@@ -1,14 +1,14 @@
 $functions: (
-  'sin',
-  'cos',
-  'tan',
-  'asin',
-  'acos',
-  'atan',
-  'sinh',
-  'cosh',
-  'tanh',
-  'asinh',
-  'acosh',
-  'atanh',
+  'sin': 'sin',
+  'cos': 'cos',
+  'tan': 'tan',
+  'asin': 'asin',
+  'acos': 'acos',
+  'atan': 'atan',
+  'sinh': 'sinh',
+  'cosh': 'cosh',
+  'tanh': 'tanh',
+  'asinh': 'asinh',
+  'acosh': 'acosh',
+  'atanh': 'atanh',
 );
