--- a/src/styles/1-utilities/variables/_operators.scss
+++ b/src/styles/1-utilities/variables/_operators.scss
@@ -7,6 +7,6 @@ $operators: (
   '=': 'equal',
   '.': 'dot',
   '±': 'sign',
-  'C': 'reset',
-  'CE': 'clear',
+  'R': 'reset',
+  'C': 'clear',
 );
