--- a/src/styles/1-utilities/variables/_variables.scss
+++ b/src/styles/1-utilities/variables/_variables.scss
@@ -1,9 +1,9 @@
-$colorBackground: #232855;
-$colorBorder: #215b63;
-$colorColor: #5fcc9c;
-$colorHover: #ffffe3;
+$color-background: #232855;
+$color-border: #215b63;
+$color-color: #5fcc9c;
+$color-hover: #ffffe3;
 
 $transition: .35s ease-in-out;
-$padding: 10px;
-$border: .5vmin solid $colorBorder;
+$border: .5vmin solid $color-border;
+$spacing: 10px;
 $radius: 5px;
