update input & output, input button styles

--- a/src/styles/2-bases/_output.scss
+++ b/src/styles/2-bases/_output.scss
@@ -1,12 +1,4 @@
 output
 {
-  @include flex-parent( $ai: center, $d: row-reverse );
-
-  padding: $padding;
-
-  color: $colorBackground;
-  background: $colorColor;
-
-  border: $border;
-  border-radius: $radius;
+  font-size: 1rem;
 }
