new calculator inputs & update variables

--- a/src/styles/1-utilities/variables/_index.scss
+++ b/src/styles/1-utilities/variables/_index.scss
@@ -1,4 +1,7 @@
+@import './helpers';
 @import './functions';
 @import './operands';
 @import './operators';
+@import './sciences';
+@import './inputs';
 @import './variables';
