move aria pressed styles to bases button styles

--- a/src/styles/2-bases/_input-button.scss
+++ b/src/styles/2-bases/_input-button.scss
@@ -19,7 +19,8 @@ input[ type=button ]
     outline: 0;
   }
 
-  &:active
+  &:active,
+  &[ aria-pressed=true ]
   {
     background: scale-color( $color-background, $lightness: -2.5% );
     border-style: inset;
